compiler/tests/fixtures/negative/error_semantic2.sol
function start() -> int {
    let x: int = 5;
    let x: int = 10;
    return x;
}
